[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["firstnapat <“napatdmsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.4.9"
dagster-webserver = "^1.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
