[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["firstnapat <“napatdmsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
dagster-duckdb = "^0.20.7"
dagster-duckdb-pandas = "^0.20.7"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
